--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -2,132 +2,87 @@ name: Build Android APK
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Setup Java
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
-    
-    - name: Setup Node.js (No Cache)
+
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
-        # حذف خط cache
-    
-    - name: Initialize Project
+        node-version: '18'
+
+    - name: Install Dependencies
       run: |
-        echo "Initializing project..."
-        # اگر package.json نداریم، ایجادش می‌کنیم
-        if [ ! -f "package.json" ]; then
-          npm init -y --silent
-        fi
+        echo "Installing dependencies..."
+        npm install
+
+    - name: Create Minimal Android Project
+      run: |
+        echo "Creating minimal Android project..."
         
-        # نصب React Native با نسخه مشخص
-        npm install react@18.2.0 react-native@0.72.6 --save --legacy-peer-deps
-    
-    - name: Install Navigation Dependencies
-      run: |
-        npm install @react-navigation/native@^6.1.9 @react-navigation/stack@^6.3.20 --legacy-peer-deps
-    
-    - name: Install Required Packages
-      run: |
-        npm install react-native-screens@^3.22.0 \
-                  react-native-safe-area-context@^4.6.3 \
-                  react-native-gesture-handler@^2.12.0 \
-                  @react-native-async-storage/async-storage@^1.18.2 \
-                  react-native-vector-icons@^9.2.0 \
-                  --legacy-peer-deps
-    
-    - name: Create Android Project Structure
-      run: |
-        echo "🛠️ Creating Android project..."
-        
-        # ساختار اصلی
+        # ساخت تمام پوشه‌ها به صورت جداگانه (برای اطمینان)
         mkdir -p android/app/src/main/java/com/invoiceapp
         mkdir -p android/app/src/main/res/values
+        mkdir -p android/app/src/main/res/layout
+        mkdir -p android/app/src/main/assets
+        mkdir -p android/gradle/wrapper
         
-        # فایل build.gradle سطح پروژه
+        # فایل build.gradle (سطح پروژه)
         cat > android/build.gradle << 'EOF'
         buildscript {
-            ext {
-                buildToolsVersion = "33.0.0"
-                minSdkVersion = 21
-                compileSdkVersion = 33
-                targetSdkVersion = 33
-                ndkVersion = "23.1.7779620"
-            }
             repositories {
                 google()
                 mavenCentral()
             }
             dependencies {
                 classpath("com.android.tools.build:gradle:7.3.1")
-                classpath("com.facebook.react:react-native-gradle-plugin")
             }
         }
         
         allprojects {
             repositories {
-                maven {
-                    url("\$rootDir/../node_modules/react-native/android")
-                }
-                maven {
-                    url("\$rootDir/../node_modules/jsc-android/dist")
-                }
                 google()
                 mavenCentral()
-                maven { url 'https://www.jitpack.io' }
             }
         }
+        EOF
+        
+        # فایل settings.gradle
+        cat > android/settings.gradle << 'EOF'
+        rootProject.name = 'InvoiceApp'
+        include ':app'
         EOF
         
         # فایل app/build.gradle
         cat > android/app/build.gradle << 'EOF'
         apply plugin: "com.android.application"
-        apply plugin: "com.facebook.react"
-        
-        project.ext.react = [
-            enableHermes: false
-        ]
         
         android {
             namespace "com.invoiceapp"
-            compileSdkVersion rootProject.ext.compileSdkVersion
+            compileSdkVersion 33
             
             defaultConfig {
-                applicationId "com.invoiceapp"
-                minSdkVersion rootProject.ext.minSdkVersion
-                targetSdkVersion rootProject.ext.targetSdkVersion
+                applicationId "com.invoiceapp.shop"
+                minSdkVersion 21
+                targetSdkVersion 33
                 versionCode 1
                 versionName "1.0"
             }
             
-            signingConfigs {
-                debug {
-                    storeFile file('debug.keystore')
-                    storePassword 'android'
-                    keyAlias 'androiddebugkey'
-                    keyPassword 'android'
-                }
-            }
-            
             buildTypes {
-                debug {
-                    signingConfig signingConfigs.debug
-                }
                 release {
-                    signingConfig signingConfigs.debug
                     minifyEnabled false
                     proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
                 }
@@ -135,22 +90,37 @@ jobs:
         }
         
         dependencies {
-            implementation("com.facebook.react:react-android")
+            implementation "com.facebook.react:react-native:0.72.6"
         }
-        
-        apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesAppBuildGradle(project)
         EOF
         
-        # فایل settings.gradle
-        cat > android/settings.gradle << 'EOF'
-        rootProject.name = 'InvoiceApp'
-        apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesSettingsGradle(settings)
-        include ':app'
+        # فایل AndroidManifest.xml
+        cat > android/app/src/main/AndroidManifest.xml << 'EOF'
+        <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+            <uses-permission android:name="android.permission.INTERNET" />
+            
+            <application
+                android:name=".MainApplication"
+                android:label="Invoice App"
+                android:icon="@mipmap/ic_launcher"
+                android:theme="@android:style/Theme.AppCompat.Light.NoActionBar">
+                <activity
+                    android:name=".MainActivity"
+                    android:label="Invoice App"
+                    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+                    android:launchMode="singleTask"
+                    android:windowSoftInputMode="adjustResize"
+                    android:exported="true">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
+            </application>
+        </manifest>
         EOF
         
-        # MainActivity.java
+        # فایل MainActivity.java
         cat > android/app/src/main/java/com/invoiceapp/MainActivity.java << 'EOF'
         package com.invoiceapp;
         
@@ -159,168 +129,34 @@ jobs:
         public class MainActivity extends ReactActivity {
             @Override
             protected String getMainComponentName() {
-                return "InvoiceApp";
+                return "main";
             }
         }
         EOF
-        
-        # AndroidManifest.xml ساده
-        cat > android/app/src/main/AndroidManifest.xml << 'EOF'
-        <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-            <uses-permission android:name="android.permission.INTERNET" />
-            
-            <application
-              android:name=".MainApplication"
-              android:label="Invoice App"
-              android:allowBackup="false"
-              android:theme="@style/AppTheme">
-              <activity
-                android:name=".MainActivity"
-                android:label="Invoice App"
-                android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-                android:launchMode="singleTask"
-                android:windowSoftInputMode="adjustResize"
-                android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
-              </activity>
-            </application>
-        </manifest>
-        EOF
-        
-        echo "✅ Android structure created"
-    
-    - name: Build APK
+
+    - name: Generate Gradle Wrapper
       run: |
         cd android
         
-        # ایجاد gradlew اگر وجود ندارد
-        if [ ! -f "gradlew" ]; then
-          cat > gradlew << 'EOF'
-          #!/bin/sh
-          # Gradle wrapper script
-          echo "Using system gradle"
-          gradle "$@"
-          EOF
-          chmod +x gradlew
-        fi
+        # استفاده از ابزار gradle برای ساخت wrapper
+        gradle wrapper
         
-        # ساخت APK با gradle مستقیم
-        gradle wrapper --gradle-version 7.5.1
-        ./gradlew assembleRelease --no-daemon
-    
+        # اطمینان از اینکه gradlew وجود دارد
+        chmod +x gradlew
+
+    - name: Install Dependencies (Ensure Node)
+      run: |
+        echo "Ensuring Node is available..."
+        # دستور npm install قبلی انجام شده است
+
+    - name: Build APK
+      run: |
+        echo "Starting build..."
+        cd android
+        ./gradlew assembleRelease --no-daemon --stacktrace
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: invoice-app
         path: android/app/build/outputs/apk/release/app-release.apk
-          }
-        
-          @Override
-          protected ReactActivityDelegate createReactActivityDelegate() {
-            return new DefaultReactActivityDelegate(
-                this,
-                getMainComponentName(),
-                DefaultNewArchitectureEntryPoint.getFabricEnabled()
-            );
-          }
-        }
-        EOF
-        
-        # ---------- strings.xml ----------
-        cat > android/app/src/main/res/values/strings.xml << 'EOF'
-        <?xml version="1.0" encoding="utf-8"?>
-        <resources>
-            <string name="app_name">InvoiceApp</string>
-        </resources>
-        EOF
-        
-        # ---------- styles.xml ----------
-        mkdir -p android/app/src/main/res/values-v21
-        cat > android/app/src/main/res/values/styles.xml << 'EOF'
-        <?xml version="1.0" encoding="utf-8"?>
-        <resources>
-            <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-                <item name="android:textColor">#000000</item>
-                <item name="android:editTextBackground">@android:color/transparent</item>
-                <item name="android:windowBackground">@android:color/white</item>
-                <item name="android:statusBarColor">@android:color/transparent</item>
-            </style>
-        </resources>
-        EOF
-        
-        cat > android/app/src/main/res/values-v21/styles.xml << 'EOF'
-        <?xml version="1.0" encoding="utf-8"?>
-        <resources>
-            <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-                <item name="android:windowTranslucentStatus">true</item>
-                <item name="android:textColor">#000000</item>
-                <item name="android:editTextBackground">@android:color/transparent</item>
-                <item name="android:windowBackground">@android:color/white</item>
-            </style>
-        </resources>
-        EOF
-        
-        echo "✅ Android project structure created successfully!"
-    
-    # 7. ایجاد فایل‌های gradle wrapper
-    - name: Setup Gradle Wrapper
-      run: |
-        cd android
-        if [ ! -f "gradlew" ]; then
-          echo "Downloading gradlew..."
-          wget -q https://raw.githubusercontent.com/gradle/gradle/master/gradlew
-          chmod +x gradlew
-        fi
-        
-        # ایجاد debug.keystore
-        echo "Creating debug keystore..."
-        keytool -genkeypair \
-          -v \
-          -keystore debug.keystore \
-          -storepass android \
-          -alias androiddebugkey \
-          -keypass android \
-          -keyalg RSA \
-          -keysize 2048 \
-          -validity 10000 \
-          -dname "CN=Android Debug, OU=Android, O=Google, L=Mountain View, ST=California, C=US" \
-          -noprompt
-        
-        # دانلود gradle wrapper files اگر لازم باشد
-        if [ ! -d "gradle/wrapper" ] || [ ! -f "gradle/wrapper/gradle-wrapper.jar" ]; then
-          echo "Downloading gradle wrapper..."
-          mkdir -p gradle/wrapper
-          wget -q -O gradle/wrapper/gradle-wrapper.jar https://github.com/gradle/gradle/raw/master/gradle/wrapper/gradle-wrapper.jar
-        fi
-    
-    # 8. ساخت APK
-    - name: Build Release APK
-      run: |
-        cd android
-        echo "🔨 Building APK..."
-        ./gradlew clean
-        ./gradlew assembleRelease --no-daemon --stacktrace
-    
-    # 9. آپلود APK
-    - name: Upload APK Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: invoice-app-apk
-        path: android/app/build/outputs/apk/release/app-release.apk
-        retention-days: 30
-    
-    # 10. نمایش اطلاعات
-    - name: Display APK Info
-      run: |
-        if [ -f "android/app/build/outputs/apk/release/app-release.apk" ]; then
-          echo "🎉 APK Successfully Built!"
-          echo "📦 File: android/app/build/outputs/apk/release/app-release.apk"
-          echo "📱 Package: com.invoiceapp"
-          echo "🔒 Signed with debug keystore"
-        else
-          echo "❌ APK not found!"
-          ls -la android/app/build/outputs/apk/
-        fi
