--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Java
+    - name: Setup Java 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
 
     - name: Setup Node.js
@@ -28,26 +28,32 @@ jobs:
         echo "Installing dependencies..."
         npm install
 
-    - name: Create Minimal Android Project
+    - name: Create Android Project
       run: |
         echo "Creating minimal Android project..."
         
-        # ساخت تمام پوشه‌ها به صورت جداگانه (برای اطمینان)
+        # ساخت پوشه‌ها
         mkdir -p android/app/src/main/java/com/invoiceapp
         mkdir -p android/app/src/main/res/values
-        mkdir -p android/app/src/main/res/layout
-        mkdir -p android/app/src/main/assets
         mkdir -p android/gradle/wrapper
         
         # فایل build.gradle (سطح پروژه)
         cat > android/build.gradle << 'EOF'
         buildscript {
+            ext {
+                buildToolsVersion = "33.0.0"
+                minSdkVersion = 21
+                compileSdkVersion = 33
+                targetSdkVersion = 33
+                ndkVersion = "23.1.7779620"
+            }
             repositories {
                 google()
                 mavenCentral()
             }
             dependencies {
                 classpath("com.android.tools.build:gradle:7.3.1")
+                classpath("com.facebook.react:react-native-gradle-plugin")
             }
         }
         
@@ -55,6 +61,7 @@ jobs:
             repositories {
                 google()
                 mavenCentral()
+                maven { url 'https://www.jitpack.io' }
             }
         }
         EOF
@@ -62,36 +69,59 @@ jobs:
         # فایل settings.gradle
         cat > android/settings.gradle << 'EOF'
         rootProject.name = 'InvoiceApp'
+        apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+        applyNativeModulesSettingsGradle(settings)
         include ':app'
         EOF
         
         # فایل app/build.gradle
         cat > android/app/build.gradle << 'EOF'
         apply plugin: "com.android.application"
+        apply plugin: "com.facebook.react"
+        
+        project.ext.react = [
+            enableHermes: true
+        ]
         
         android {
             namespace "com.invoiceapp"
-            compileSdkVersion 33
+            compileSdkVersion rootProject.ext.compileSdkVersion
             
             defaultConfig {
-                applicationId "com.invoiceapp.shop"
-                minSdkVersion 21
-                targetSdkVersion 33
+                applicationId "com.invoiceapp"
+                minSdkVersion rootProject.ext.minSdkVersion
+                targetSdkVersion rootProject.ext.targetSdkVersion
                 versionCode 1
                 versionName "1.0"
             }
             
             buildTypes {
+                debug {
+                    signingConfig signingConfigs.debug
+                }
                 release {
+                    signingConfig signingConfigs.debug
                     minifyEnabled false
-                    proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+                }
+            }
+            
+            signingConfigs {
+                debug {
+                    storeFile file('debug.keystore')
+                    storePassword 'android'
+                    keyAlias 'androiddebugkey'
+                    keyPassword 'android'
                 }
             }
         }
         
         dependencies {
-            implementation "com.facebook.react:react-native:0.72.6"
+            implementation("com.facebook.react:react-android")
+            implementation("com.facebook.react:hermes-android")
         }
+        
+        apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+        applyNativeModulesAppBuildGradle(project)
         EOF
         
         # فایل AndroidManifest.xml
@@ -101,12 +131,13 @@ jobs:
             
             <application
                 android:name=".MainApplication"
-                android:label="Invoice App"
+                android:label="@string/app_name"
                 android:icon="@mipmap/ic_launcher"
-                android:theme="@android:style/Theme.AppCompat.Light.NoActionBar">
+                android:allowBackup="false"
+                android:theme="@style/AppTheme.NoActionBar">
                 <activity
                     android:name=".MainActivity"
-                    android:label="Invoice App"
+                    android:label="@string/app_name"
                     android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
                     android:launchMode="singleTask"
                     android:windowSoftInputMode="adjustResize"
@@ -129,30 +160,31 @@ jobs:
         public class MainActivity extends ReactActivity {
             @Override
             protected String getMainComponentName() {
-                return "main";
+                return "InvoiceApp";
             }
         }
+        EOF
+        
+        # فایل strings.xml
+        cat > android/app/src/main/res/values/strings.xml << 'EOF'
+        <?xml version="1.0" encoding="utf-8"?>
+        <resources>
+            <string name="app_name">Invoice App</string>
+        </resources>
         EOF
 
     - name: Generate Gradle Wrapper
       run: |
+        echo "Generating Gradle Wrapper..."
         cd android
         
-        # استفاده از ابزار gradle برای ساخت wrapper
         gradle wrapper
         
-        # اطمینان از اینکه gradlew وجود دارد
-        chmod +x gradlew
-
-    - name: Install Dependencies (Ensure Node)
-      run: |
-        echo "Ensuring Node is available..."
-        # دستور npm install قبلی انجام شده است
-
     - name: Build APK
       run: |
         echo "Starting build..."
         cd android
+        chmod +x gradlew
         ./gradlew assembleRelease --no-daemon --stacktrace
 
     - name: Upload APK
