--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -23,12 +23,10 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install Dependencies
-      run: |
-        echo "Installing dependencies..."
-        npm install
+    - name: Install Expo CLI
+      run: npm install -g eas-cli
 
-    - name: Create Android Project
+    - name: Create Minimal Android Project
       run: |
         echo "Creating minimal Android project..."
         
@@ -69,8 +67,6 @@ jobs:
         # فایل settings.gradle
         cat > android/settings.gradle << 'EOF'
         rootProject.name = 'InvoiceApp'
-        apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesSettingsGradle(settings)
         include ':app'
         EOF
         
@@ -88,29 +84,27 @@ jobs:
             compileSdkVersion rootProject.ext.compileSdkVersion
             
             defaultConfig {
-                applicationId "com.invoiceapp"
+                applicationId "com.invoiceapp.shop"
                 minSdkVersion rootProject.ext.minSdkVersion
                 targetSdkVersion rootProject.ext.targetSdkVersion
                 versionCode 1
                 versionName "1.0"
             }
             
-            buildTypes {
-                debug {
-                    signingConfig signingConfigs.debug
-                }
-                release {
-                    signingConfig signingConfigs.debug
-                    minifyEnabled false
-                }
-            }
-            
             signingConfigs {
-                debug {
+                release {
                     storeFile file('debug.keystore')
                     storePassword 'android'
                     keyAlias 'androiddebugkey'
                     keyPassword 'android'
+                }
+            }
+            
+            buildTypes {
+                release {
+                    signingConfig signingConfigs.release
+                    minifyEnabled false
+                    proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
                 }
             }
         }
@@ -120,38 +114,34 @@ jobs:
             implementation("com.facebook.react:hermes-android")
         }
         
-        apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesAppBuildGradle(project)
-        EOF
-        
         # فایل AndroidManifest.xml
         cat > android/app/src/main/AndroidManifest.xml << 'EOF'
         <manifest xmlns:android="http://schemas.android.com/apk/res/android">
             <uses-permission android:name="android.permission.INTERNET" />
             
             <application
-                android:name=".MainApplication"
-                android:label="@string/app_name"
-                android:icon="@mipmap/ic_launcher"
-                android:allowBackup="false"
-                android:theme="@style/AppTheme.NoActionBar">
-                <activity
-                    android:name=".MainActivity"
-                    android:label="@string/app_name"
-                    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-                    android:launchMode="singleTask"
-                    android:windowSoftInputMode="adjustResize"
-                    android:exported="true">
-                    <intent-filter>
-                        <action android:name="android.intent.action.MAIN" />
-                        <category android:name="android.intent.category.LAUNCHER" />
-                    </intent-filter>
-                </activity>
+              android:name=".MainApplication"
+              android:label="Invoice App"
+              android:icon="@mipmap/ic_launcher"
+              android:allowBackup="false"
+              android:theme="@style/AppTheme.NoActionBar">
+              <activity
+                android:name=".MainActivity"
+                android:label="Invoice App"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+                android:launchMode="singleTask"
+                android:windowSoftInputMode="adjustResize"
+                android:exported="true">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+              </activity>
             </application>
         </manifest>
         EOF
         
-        # فایل MainActivity.java
+        # MainActivity.java
         cat > android/app/src/main/java/com/invoiceapp/MainActivity.java << 'EOF'
         package com.invoiceapp;
         
@@ -160,32 +150,40 @@ jobs:
         public class MainActivity extends ReactActivity {
             @Override
             protected String getMainComponentName() {
-                return "InvoiceApp";
+                return "main";
             }
         }
         EOF
+
+    - name: Copy Project Files (Override Structure)
+      run: |
+        echo "Copying source files to android project..."
         
-        # فایل strings.xml
-        cat > android/app/src/main/res/values/strings.xml << 'EOF'
-        <?xml version="1.0" encoding="utf-8"?>
-        <resources>
-            <string name="app_name">Invoice App</string>
-        </resources>
-        EOF
+        # کپی کردن فایل‌های JS به assets
+        mkdir -p android/app/src/main/assets
+        cp App.js android/app/src/main/assets/index.js
+        cp package.json android/app/src/main/assets/package.json
+        
+        # کپی کردن فایل‌های screens
+        mkdir -p android/app/src/main/assets/screens
+        cp -a screens/*.js android/app/src/main/assets/screens/
+        
+        # ایجاد فایل index.android.js bundle wrapper
+        echo 'import App from "./App.js";' > android/app/src/main/assets/index.android.js
+        echo 'export default App;' >> android/app/src/main/assets/index.android.js
 
     - name: Generate Gradle Wrapper
       run: |
-        echo "Generating Gradle Wrapper..."
         cd android
-        
-        gradle wrapper
-        
+        curl -Lo gradlew https://raw.githubusercontent.com/gradle/gradle/v8.5.1/scripts/gradlew
+        curl -Lo gradle/wrapper/gradle-wrapper.jar https://raw.githubusercontent.com/gradle/gradle/v8.5.1/lib/gradle-wrapper.jar
+        curl -Lo gradle/wrapper/gradle-wrapper.properties https://raw.githubusercontent.com/gradle/gradle/v8.5.1/lib/gradle-wrapper/gradle-wrapper.properties
+        chmod +x gradlew
+
     - name: Build APK
       run: |
-        echo "Starting build..."
         cd android
-        chmod +x gradlew
-        ./gradlew assembleRelease --no-daemon --stacktrace
+        ./gradlew assembleRelease --stacktrace
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
